# curotec

./: .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  coverage.xml  pyproject.toml
backend/app/: main.py
backend/app/controllers/: README.md  auth_controller.py  order_controller.py  user_controller.py
backend/app/routes/: auth_route.py  orders_route.py  users_route.py
backend/entities/: entities.py
backend/repository/: base_repository.py  db_handler.py
backend/repository/order/: order_model.py  order_repository.py
backend/repository/user/: user_model.py  user_repository.py
backend/tests/app/e2e/: test_order_route.py  test_user_route.py
backend/tests/entities/: test_order.py  test_user.py
backend/tests/repository/: conftest.py  test_db_handler.py
backend/tests/repository/order/: test_order_repository.py
backend/tests/repository/user/: test_user_repository.py
frontend/: .dockerignore  .env.production  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  LoginPage.tsx  MainPage.tsx  Order.tsx  OrderForm.tsx  PrivateRoute.tsx  index.html  index.js
frontend/src/components/: EditModal.tsx  Order.tsx  OrderForm.tsx
frontend/src/contexts/: AuthProvider.tsx  OrderProvider.tsx
frontend/src/styles/: order.css
frontend/src/types/: order.ts
