[project]
name = "backend"
version = "0.1.0"
description = "Backend application for Curotec assessment"
authors = [
    {name = "Diego Senese",email = "diegosenese@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "sqlalchemy (==2.0.15)",
    "pytest (==7.3.1)",
    "fastapi[standard] (==0.109)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
httpx = "<0.28"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

